# tiny_csv

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
tiny_csv/: CMakeLists.txt
tiny_csv/include/tiny_csv/: config.hpp  multimatch.hpp  task_queue.hpp  text_buffer.hpp  text_fsm.hpp  tiny_csv.hpp  tiny_csv.ipp  tokenizer.hpp  type_loader.hpp  types.hpp  utility.hpp
tiny_csv/src/: multimatch.cpp  tokenizer.cpp  type_loader.cpp  utility.cpp
tiny_csv/tests/: basic_test.csv  optional.csv  test_csv_parser.cpp  test_perf.cpp  test_task_queue.cpp  test_tokenizer.cpp
